force-app/main/default/objects/SBQQ__ContractedPrice__c/fields/Remittance_Account__c.field-meta.xml
<CustomField>
    <fullName>Remittance_Account__c</fullName>
    <label>OLD Remittance Account</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AXS</fullName>
            </value>
            <value>
                <fullName>Client</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>