force-app/main/default/objects/SBQQ__ContractedPrice__c/fields/Revenue_Center_GL_Code__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Center_GL_Code__c</fullName>
    <formula>FIN_Revenue_Center_Lookup__r.FIN_GL_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Revenue Center GL Code</label>
    <type>Text</type>
</CustomField>