force-app/main/default/objects/SBQQ__ContractedPrice__c/fields/Subledger_Description__c.field-meta.xml
<CustomField>
    <fullName>Subledger_Description__c</fullName>
    <formula>FIN_Subledger_Code__r.FIN_Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Subledger Description</label>
    <type>Text</type>
</CustomField>