force-app/main/default/objects/SBQQ__ContractedPrice__c/recordTypes/FIN_Contracted_Component.recordType-meta.xml
<RecordType>
    <fullName>FIN_Contracted_Component</fullName>
    <active>false</active>
    <label>FIN Contracted Component</label>
</RecordType>