force-app/main/default/objects/SBQQ__ContractedPrice__c/recordTypes/FIN_Contracted_Fee.recordType-meta.xml
<RecordType>
    <fullName>FIN_Contracted_Fee</fullName>
    <active>true</active>
    <label>Contracted Fee</label>
</RecordType>