force-app/main/default/objects/SBQQ__ContractedPrice__c/recordTypes/FIN_Contracted_Product.recordType-meta.xml
<RecordType>
    <fullName>FIN_Contracted_Product</fullName>
    <active>true</active>
    <label>Contracted Product</label>
</RecordType>