force-app/main/default/objects/SBQQ__ContractedPrice__c/validationRules/FinancialCode_if_Active.validationRule-meta.xml
<ValidationRule>
    <fullName>FinancialCode_if_Active</fullName>
    <active>true</active>
    <errorConditionFormula>FIN_Active__c &amp;&amp; ISBLANK(FIN_Financial_Code__c)</errorConditionFormula>
    <errorDisplayField>FIN_Financial_Code__c</errorDisplayField>
    <errorMessage>The financial code must be specified in the active library association</errorMessage>
</ValidationRule>