force-app/main/default/objects/SBQQ__ContractedPrice__c/validationRules/Product_Price_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Product_Price_Check</fullName>
    <active>true</active>
    <errorConditionFormula>RecordType.DeveloperName = &apos;FIN_Contracted_Fee&apos; &amp;&amp;  (FIN_ProductName__c != &apos;AXS Fee&apos; ||  SBQQ__Price__c != 1)</errorConditionFormula>
    <errorMessage>When creating Contracted Fee record, You must select &quot;AXS Fee&quot; as Product and Price should be &quot;1$&quot;</errorMessage>
</ValidationRule>