force-app/main/default/objects/SBQQ__ContractedPrice__c/validationRules/TicketPricenConponent_or_FeenComponent.validationRule-meta.xml
<ValidationRule>
    <fullName>TicketPricenConponent_or_FeenComponent</fullName>
    <active>true</active>
    <description>Only 1 of those fields must be populated: Ticket Price and Component or Fee and Component</description>
    <errorConditionFormula>AND(NOT(ISPICKVAL(FIN_Ticket_price_Component__c,&apos;&apos;)), NOT(ISPICKVAL(FIN_Fee_and_Component__c,&apos;&apos;)))</errorConditionFormula>
    <errorDisplayField>FIN_Fee_and_Component__c</errorDisplayField>
    <errorMessage>Only 1 of those fields must be populated: Ticket Price and Component or Fee and Component</errorMessage>
</ValidationRule>