force-app/main/default/objects/SBQQ__ContractedPrice__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>FIN_LibraryAssociationName__c</columns>
    <columns>FIN_Context__c</columns>
    <columns>Association_Type__c</columns>
    <columns>SBQQ__Product__c</columns>
    <columns>FIN_Component_Number__c</columns>
    <columns>FIN_Fee__c</columns>
    <columns>FIN_Fee_Component__c</columns>
    <columns>FIN_TicketCategories__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>FIN_Financial_Code__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>