force-app/main/default/objects/SBQQ__ContractedPrice__c/listViews/First_Avenue.listView-meta.xml
<ListView>
    <fullName>First_Avenue</fullName>
    <columns>NAME</columns>
    <columns>FIN_LibraryAssociationName__c</columns>
    <columns>Association_Type__c</columns>
    <columns>FIN_Context__c</columns>
    <columns>FIN_Fee_Category__c</columns>
    <columns>SBQQ__Product__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>FIN_Context__c</field>
        <operation>equals</operation>
        <value>First Avenue</value>
    </filters>
    <filters>
        <field>FIN_Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>First Avenue</label>
</ListView>