force-app/main/default/objects/SBQQ__ContractedPrice__c/listViews/US_Ticket_Association_Type.listView-meta.xml
<ListView>
    <fullName>US_Ticket_Association_Type</fullName>
    <columns>NAME</columns>
    <columns>FIN_LibraryAssociationName__c</columns>
    <columns>SBQQ__Product__c</columns>
    <columns>FIN_Product_Type_NUM__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>FIN_Region__c</field>
        <operation>equals</operation>
        <value>US</value>
    </filters>
    <filters>
        <field>Association_Type__c</field>
        <operation>equals</operation>
        <value>Ticket</value>
    </filters>
    <label>US Ticket Association Type</label>
    <sharedTo>
        <group>US_Region</group>
    </sharedTo>
</ListView>