force-app/main/default/objects/SBQQ__ContractedPrice__c/listViews/USDataBased.listView-meta.xml
<ListView>
    <fullName>USDataBased</fullName>
    <columns>NAME</columns>
    <columns>FIN_LibraryAssociationName__c</columns>
    <columns>FIN_Context__c</columns>
    <columns>FIN_Fee__c</columns>
    <columns>SBQQ__Product__c</columns>
    <columns>FIN_Display_Number__c</columns>
    <columns>FIN_Fee_Component__c</columns>
    <columns>SBQQ__Contract__c</columns>
    <columns>Association_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>FIN_Context__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>FIN_Display_Number__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>US Data Based</label>
</ListView>